tests/baselines/reference/genericUnknownTypeParamWithKeyofIndexedAccess.errors.txt
tests/cases/compiler/genericUnknownTypeParamWithKeyofIndexedAccess.ts(2,12): error TS2531: Object is possibly 'null'.
tests/cases/compiler/genericUnknownTypeParamWithKeyofIndexedAccess.ts(5,12): error TS2345: Argument of type 'string' is not assignable to parameter of type 'never'.
tests/cases/compiler/genericUnknownTypeParamWithKeyofIndexedAccess.ts(8,12): error TS2531: Object is possibly 'null'.
tests/cases/compiler/genericUnknownTypeParamWithKeyofIndexedAccess.ts(11,13): error TS2345: Argument of type 'string' is not assignable to parameter of type 'never'.


==== tests/cases/compiler/genericUnknownTypeParamWithKeyofIndexedAccess.ts (4 errors) ====
    function test<T, K extends keyof T>(t: T, k: K) {
        return t[k];
               ~
!!! error TS2531: Object is possibly 'null'.
    }
    
    test(null, 'foo')
               ~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'never'.
    
    function test2<T extends unknown, K extends keyof T>(t: T, k: K) {
        return t[k];
               ~
!!! error TS2531: Object is possibly 'null'.
    }
    
    test2(null, 'foo')
                ~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'never'.